fix: fix problems with horizontal scroll and close popup button

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,6 +8,7 @@
   max-width: 100%;
   margin: 0 auto;
   padding: 0;
+  overflow-x: hidden;
 }
 
 #root {
