--- a/src/components/Info/Steps/Steps.css
+++ b/src/components/Info/Steps/Steps.css
@@ -61,4 +61,12 @@
   line-height: 35px;
   text-indent: 0;
   text-align: right;
+  box-shadow: black;
+}
+
+@media screen and (max-width: 840px) {
+  .steps__list-item {
+    font-size: 26px;
+    line-height: 30px;
+  }
 }
