--- a/src/components/Popup/Popup.css
+++ b/src/components/Popup/Popup.css
@@ -33,16 +33,16 @@
 
 .popup__close-button {
   position: absolute;
-  top: -30px;
-  right: -20px;
+  top: 0px;
+  right: 5px;
   border: none;
   background-color: transparent;
-  color: #e5e5e5;
-  text-align: left;
+  color: #2e3d41;
   padding: 0;
   margin: 0;
   text-indent: 0;
   font-size: 30px;
   line-height: 30px;
   width: fit-content;
+  z-index: 1;
 }
